fix bug 937634 - Prevent heading wrapping in FFOS

--- a/media/redesign/stylus/home.styl
+++ b/media/redesign/stylus/home.styl
@@ -390,6 +390,10 @@
       margin-right: 0;
     }
 
+    h2 {
+      font-size: 20px;
+    }
+
     .column-callout {
       a {
         font-size: larger-font-size;
